<resources>
    <string name="app_name">ZNO 2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"><b>З</b>овнішнє\n<b>Н</b>езалежне\n<b>О</b>цінювання</string>
    <string name="nav_header_subtitle">Підготовка до ЗНО з української мови та літератури</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Домашня Сторінка</string>
    <string name="menu_tests">Тести</string>
    <string name="menu_manual">Посібник</string>
    <string name="menu_links">Корисні Посилання</string>
    <string name="menu_about">Про Програму</string>
    <string name="menu_send">Поширити</string>

    <string name="usefulLink1"><a href="https://zno.osvita.ua/">zno.osvita.ua</a> - Тести ЗНО онлайн</string>
    <string name="usefulLink2"><a href="http://testportal.gov.ua/">testportal.gov.ua</a> - Стало відомо які будуть ести цього року</string>
    <string name="usefulLink3"><a href="https://ru.wikipedia.org/wiki/%D0%92%D0%BD%D0%B5%D1%88%D0%BD%D0%B5%D0%B5_%D0%BD%D0%B5%D0%B7%D0%B0%D0%B2%D0%B8%D1%81%D0%B8%D0%BC%D0%BE%D0%B5_%D0%BE%D1%86%D0%B5%D0%BD%D0%B8%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5">wikipedia.org</a> - ЗНО</string>
    <string name="usefulLink4"><a href="https://dneprtest.dp.ua/cms/">dneprtest.dp.ua</a> - Тестові завдання минулих років</string>
    <string name="usefulLink5"><a href="https://mon.gov.ua/ua/tag/zno">mon.gov.ua</a> - Зно. Міністерство освіти</string>
    <string name="usefulLink6"><a href="https://tsn.ua/ukrayina/zno-2020-v-ucoyao-oprilyudnili-grafik-probnogo-testuvannya-ta-yogo-vartist-1458369.html">tsn.ua</a> - Новини ЗНО в Україні</string>

    <string name="home_page_quotation">Дурень – не обов’язково Іванушка-дурачок. Дурень нині часом закінчує два факультети,
        займає високі посади, має ордени, партстаж. Він часом здається зовні ніби звичайною людиною.\n\n\t\t\t<b>Олександp Довженко</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
