<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.zno2020.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.zno2020.ui.tests.TestsPageFragment"
        android:label="@string/menu_tests"
        tools:layout="@layout/fragment_tests" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.zno2020.ui.manual.ManualCatalogFragment"
        android:label="@string/menu_manual"
        tools:layout="@layout/fragment_manual_catalog" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.zno2020.ui.tools.UsefulLinksFragment"
        android:label="@string/menu_links"
        tools:layout="@layout/fragment_useful_links" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.zno2020.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.zno2020.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/testing_fragment"
        android:name="com.example.zno2020.ui.tests.TestingFragment"
        android:label="testing_fragment"
        tools:layout="@layout/testing_fragment" />
    <fragment
        android:id="@+id/manualTests"
        android:name="com.example.zno2020.ui.manual.ManualTests"
        android:label="fragment_manual_tests"
        tools:layout="@layout/fragment_manual_tests" />
</navigation>